--- a/workspace/ims-client/src/app/buckwaframework/project/pages/result-analysis/result-analysis.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/result-analysis/result-analysis.component.html
@@ -10,29 +10,29 @@
                 <div class="inline fields">
                     <div class="ten wide field">
                         <label class="custom-label-w-25">เลขทะเบียนสรรพสามิต</label>
-                        <input type="text" readonly="" class="custom-readonly" value="####################">
+                        <input type="text" readonly="" class="custom-readonly" value="2560-00178-5">
                     </div>
                     <div class="six wide field">
                         <label class="custom-label-w-25">เลขประจำตัวผู้เสียภาษีอากร</label>
-                        <input type="text" readonly="" class="custom-readonly" value="1234567890123">
+                        <input type="text" readonly="" class="custom-readonly" value="1-5599-00168-99-6">
                     </div>
                 </div>
 
                 <div class="inline fields">
                     <div class="ten wide field">
                         <label class="custom-label-w-25">ผู้ประกอบการ</label>
-                        <input type="text" readonly="" class="custom-readonly" value="####################">
+                        <input type="text" readonly="" class="custom-readonly" value="น้ำหอมเทสเตอร์ BB ราคาส่ง 30">
                     </div>
                     <div class="six wide field">
                         <label class="custom-label-w-25">เลขที่วิเคราะห์</label>
-                        <input type="text" readonly="" class="custom-readonly" value="####################">
+                        <input type="text" readonly="" class="custom-readonly" value="000000000000">
                     </div>
                 </div>
 
                 <div class="inline fields">
                     <div class="ten wide field">
                         <label class="custom-label-w-25">โรงอุตสาหกรรม</label>
-                        <input type="text" readonly="" class="custom-readonly" value="############">
+                        <input type="text" readonly="" class="custom-readonly" value="น้ำหอมเทสเตอร์">
                     </div>
                 </div>
 
@@ -41,14 +41,14 @@
                 <div class="inline fields">
                     <div class="ten wide field">
                         <label class="custom-label-w-25">ที่ตั้ง</label>
-                        <input type="text" readonly="" class="custom-readonly" value="#########################">
+                        <input type="text" readonly="" class="custom-readonly" value="65/9">
                     </div>
                 </div>
 
                 <div class="inline fields">
                     <div class="ten wide field">
                         <label class="custom-label-w-25">วิเคราะห์โดย</label>
-                        <input type="text" readonly="" class="custom-readonly" value="############">
+                        <input type="text" readonly="" class="custom-readonly" value="User 1">
                     </div>
                 </div>
                 <div class="inline fields">
