--- a/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
@@ -12,22 +12,22 @@
             <div class="ui form">
                 <div class="inline fields">
                     <div class="eight wide field ">
-                        <label class="label25">ทะเบียนสรรพสามิต</label>
+                        <label class="custom-label-w-25">ทะเบียนสรรพสามิต</label>
                         <input type="text" class="custom-readonly" placeholder="ทะเบียนสรรพสามิต" readonly="" value="2560-00178-5">
                     </div>
                     <div class="eight wide field ">
-                        <label class="label20">เลขประจำตัวผู้เสียภาษี</label>
+                        <label class="custom-label-w-20">เลขประจำตัวผู้เสียภาษี</label>
                         <input type="text" class="custom-readonly" placeholder="เลขประจำตัวผู้เสียภาษี" readonly="" value="1-5599-00168-99-6" >
                     </div>
                 </div>
 
                 <div class="inline fields">
                     <div class="eight wide field">
-                        <label class="label25">ผู้ประกอบการ </label>
+                        <label class="custom-label-w-25">ผู้ประกอบการ </label>
                         <input type="text" class="custom-readonly" placeholder="ผู้ประกอบการ" readonly=""  value="น้ำหอมเทสเตอร์ BB ราคาส่ง 30">
                     </div>
                     <div class="eight wide field ">
-                        <label class="label20">เลขที่วิเคราะห์</label>
+                        <label class="custom-label-w-20">เลขที่วิเคราะห์</label>
                         <input type="text" class="custom-readonly" placeholder="เลขที่วิเคราะห์" readonly="" value="000000000000">
                     </div>
                 </div>
@@ -107,7 +107,7 @@
                                     1
                                 </td>
                                 <td>
-                                    <a href="javascript:;"> กระดาษทำการเปรียบเทียบปริมาณการจำหน่ายสินค้าสำเร็จรูปภายในประเทศ </a>
+                                    <a href="javascript:;" routerLink="/create-form" > กระดาษทำการเปรียบเทียบปริมาณการจำหน่ายสินค้าสำเร็จรูปภายในประเทศ </a>
                                 </td>
                             </tr>
                             <tr>
@@ -115,7 +115,7 @@
                                     2
                                 </td>
                                 <td>
-                                    <a href="javascript:;"> กระดาษทำการเปรียบเทียบปริมาณการจำหน่ายสินค้าสำเร็จรูปต่างประเทศ </a>
+                                    <a href="javascript:;" routerLink="/create-form" > กระดาษทำการเปรียบเทียบปริมาณการจำหน่ายสินค้าสำเร็จรูปต่างประเทศ </a>
                                 </td>
                             </tr>
                         </tbody>
