--- a/workspace/ims-client/src/styles.css
+++ b/workspace/ims-client/src/styles.css
@@ -33,3 +33,7 @@ label.custom-label-w-25 {
 label.custom-label-w-30 {
     width: 25em !important;
 }
+
+label.custom-label-w-20 {
+    width: 20em !important;
+}
