--- a/workspace/ims-client/src/app/buckwaframework/project/pages/create-form/create-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/create-form/create-form.component.html
@@ -31,6 +31,27 @@
                         <input type="text" class="custom-readonly" placeholder="เลขที่วิเคราะห์" readonly="" value="000000000000">
                     </div>
                 </div>
+
+                <div class="inline fields">
+                    <div class="eight wide field required">
+                        <label class="custom-label-w-25">รอบระยะเวลาการตรวจสอบ</label>
+                        <div class="eight wide field">
+                            <div class="ui icon input">
+                                <input type="text" class="custom-readonly" placeholder="MM/YYYY" value="12/2017" readonly="">
+                                <i class="add to calendar icon"></i>
+                            </div>
+                        </div>
+                        <div class="eight wide field">
+                            <label>-</label>
+                            <div class="ui icon input">
+                                <input type="text" class="custom-readonly" placeholder="MM/YYYY" value="12/2017" readonly="">
+                                <i class="add to calendar icon"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
 
         </div>
