--- a/workspace/ims-client/src/app/buckwaframework/project/pages/result-analysis/result-analysis.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/result-analysis/result-analysis.component.html
@@ -20,8 +20,20 @@
 
                 <div class="inline fields">
                     <div class="ten wide field">
-                        <label class="custom-label-w-25">ผู้ประกอบการ</label>
-                        <input type="text" readonly="" class="custom-readonly" value="น้ำหอมเทสเตอร์ BB ราคาส่ง 30">
+                        <label class="custom-label-w-25">รอบระยะเวลาการตรวจสอบ</label>
+                        <div class="eight wide field">
+                            <div class="ui icon input">
+                                <input type="text" class="custom-readonly" placeholder="MM/YYYY" value="12/2017" readonly="">
+                                <i class="add to calendar icon"></i>
+                            </div>
+                        </div>
+                        <div class="eight wide field">
+                            <label>-</label>
+                            <div class="ui icon input">
+                                <input type="text" class="custom-readonly" placeholder="MM/YYYY" value="12/2017" readonly="">
+                                <i class="add to calendar icon"></i>
+                            </div>
+                        </div>
                     </div>
                     <div class="six wide field">
                         <label class="custom-label-w-25">เลขที่วิเคราะห์</label>
@@ -29,6 +41,12 @@
                     </div>
                 </div>
 
+                <div class="inline fields">
+                    <div class="ten wide field">
+                        <label class="custom-label-w-25">ผู้ประกอบการ</label>
+                        <input type="text" readonly="" class="custom-readonly" value="น้ำหอมเทสเตอร์ BB ราคาส่ง 30">
+                    </div>
+                </div>
                 <div class="inline fields">
                     <div class="ten wide field">
                         <label class="custom-label-w-25">โรงอุตสาหกรรม</label>
