--- a/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
@@ -17,20 +17,40 @@
                     </div>
                     <div class="eight wide field ">
                         <label class="custom-label-w-20">เลขประจำตัวผู้เสียภาษี</label>
-                        <input type="text" class="custom-readonly" placeholder="เลขประจำตัวผู้เสียภาษี" readonly="" value="1-5599-00168-99-6" >
+                        <input type="text" class="custom-readonly" placeholder="เลขประจำตัวผู้เสียภาษี" readonly="" value="1-5599-00168-99-6">
                     </div>
                 </div>
 
                 <div class="inline fields">
                     <div class="eight wide field">
                         <label class="custom-label-w-25">ผู้ประกอบการ </label>
-                        <input type="text" class="custom-readonly" placeholder="ผู้ประกอบการ" readonly=""  value="น้ำหอมเทสเตอร์ BB ราคาส่ง 30">
+                        <input type="text" class="custom-readonly" placeholder="ผู้ประกอบการ" readonly="" value="น้ำหอมเทสเตอร์ BB ราคาส่ง 30">
                     </div>
                     <div class="eight wide field ">
                         <label class="custom-label-w-20">เลขที่วิเคราะห์</label>
                         <input type="text" class="custom-readonly" placeholder="เลขที่วิเคราะห์" readonly="" value="000000000000">
                     </div>
                 </div>
+
+                <div class="inline fields">
+                    <div class="eight wide field required">
+                        <label class="custom-label-w-25">รอบระยะเวลาการตรวจสอบ</label>
+                        <div class="eight wide field">
+                            <div class="ui icon input">
+                                <input type="text" class="custom-readonly" placeholder="MM/YYYY" value="12/2017" readonly="">
+                                <i class="add to calendar icon"></i>
+                            </div>
+                        </div>
+                        <div class="eight wide field">
+                            <label>-</label>
+                            <div class="ui icon input">
+                                <input type="text" class="custom-readonly" placeholder="MM/YYYY" value="12/2017" readonly="">
+                                <i class="add to calendar icon"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
 
         </div>
@@ -107,7 +127,7 @@
                                     1
                                 </td>
                                 <td>
-                                    <a href="javascript:;" routerLink="/create-form" > กระดาษทำการเปรียบเทียบปริมาณการจำหน่ายสินค้าสำเร็จรูปภายในประเทศ </a>
+                                    <a href="javascript:;" routerLink="/create-form"> กระดาษทำการเปรียบเทียบปริมาณการจำหน่ายสินค้าสำเร็จรูปภายในประเทศ </a>
                                 </td>
                             </tr>
                             <tr>
@@ -115,7 +135,7 @@
                                     2
                                 </td>
                                 <td>
-                                    <a href="javascript:;" routerLink="/create-form" > กระดาษทำการเปรียบเทียบปริมาณการจำหน่ายสินค้าสำเร็จรูปต่างประเทศ </a>
+                                    <a href="javascript:;" routerLink="/create-form"> กระดาษทำการเปรียบเทียบปริมาณการจำหน่ายสินค้าสำเร็จรูปต่างประเทศ </a>
                                 </td>
                             </tr>
                         </tbody>
