add create-select new page

--- a/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
@@ -100,7 +100,16 @@
                                                         <!-- <div class="description">Individual component CSS and JS</div> -->
                                                     </div>
                                                 </div>
-
+                                                <div class="item hand-click">
+                                                    <i class="file text outline icon"></i>
+                                                    <div class="content">
+                                                        <div class="header">
+                                                            <a href="javascript:;" routerLink="/select-new-form">สร้างกระดาษทำการใหม่
+                                                            </a>
+                                                        </div>
+                                                        <!-- <div class="description">Individual component CSS and JS</div> -->
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
