--- a/workspace/ims-client/src/app/buckwaframework/project/pages/analysis/analysis.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/analysis/analysis.component.html
@@ -3,7 +3,7 @@
         <h2 class="ui header">วิเคราะห์ข้อมูลเบื้องต้น</h2>
 
         <div class="ui top attached header">
-            <span>Criteria</span>
+            <span>เงื่อนไข</span>
         </div>
 
         <div class="ui attached segment">
@@ -11,11 +11,11 @@
                 <div class="inline fields">
                     <div class="eight wide field required">
                         <label class="custom-label-w-25">เลขทะเบียนสรรพสามิต</label>
-                        <input type="text">
+                        <input type="text" value="2560-00178-5">
                     </div>
                     <div class="eight wide field">
                         <label class="custom-label-w-20">เลขประจำตัวผู้เสียภาษีอากร</label>
-                        <input type="text">
+                        <input type="text" value="1-5599-00168-99-6">
                     </div>
                 </div>
 
@@ -24,14 +24,14 @@
                         <label class="custom-label-w-25">รอบระยะเวลาการตรวจสอบ</label>
                         <div class="eight wide field">
                             <div class="ui icon input">
-                                <input type="text" placeholder="MM/YYYY">
+                                <input type="text" placeholder="MM/YYYY" value="11/2560">
                                 <i class="add to calendar icon"></i>
                             </div>
                         </div>
                         <div class="eight wide field">
                             <label>-</label>
                             <div class="ui icon input">
-                                <input type="text" placeholder="MM/YYYY">
+                                <input type="text" placeholder="MM/YYYY" value="12/2560">
                                 <i class="add to calendar icon"></i>
                             </div>
                         </div>
