--- a/workspace/ims-client/src/app/buckwaframework/project/pages/create-form/create-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/create-form/create-form.component.html
@@ -24,11 +24,11 @@
                 <div class="inline fields">
                     <div class="eight wide field">
                         <label class="custom-label-w-25">ผู้ประกอบการ </label>
-                        <input type="text" class="custom-readonly" placeholder="ผู้ประกอบการ" readonly="" value="รถยนต์สำเร็จรูป BB ราคาส่ง 30">
+                        <input type="text" class="custom-readonly" placeholder="ผู้ประกอบการ" readonly="" value="บ. ฮอนด้า มอเตอร์ ประเทศไทย">
                     </div>
                     <div class="eight wide field ">
                         <label class="custom-label-w-20">เลขที่วิเคราะห์</label>
-                        <input type="text" class="custom-readonly" placeholder="เลขที่วิเคราะห์" readonly="" value="000000000000">
+                        <input type="text" class="custom-readonly" placeholder="เลขที่วิเคราะห์" readonly="" value="256000000001">
                     </div>
                 </div>
 
@@ -37,14 +37,14 @@
                         <label class="custom-label-w-25">รอบระยะเวลาการตรวจสอบ</label>
                         <div class="eight wide field">
                             <div class="ui icon input">
-                                <input type="text" class="custom-readonly" placeholder="MM/YYYY" value="12/2017" readonly="">
+                                <input type="text" class="custom-readonly" placeholder="MM/YYYY" value="11/2560" readonly="">
                                 <i class="add to calendar icon"></i>
                             </div>
                         </div>
                         <div class="eight wide field">
                             <label>-</label>
                             <div class="ui icon input">
-                                <input type="text" class="custom-readonly" placeholder="MM/YYYY" value="12/2017" readonly="">
+                                <input type="text" class="custom-readonly" placeholder="MM/YYYY" value="12/2560" readonly="">
                                 <i class="add to calendar icon"></i>
                             </div>
                         </div>
@@ -79,9 +79,9 @@
         <div class="ui segment" *ngIf="showUploadDetail">
             <div class="ui grid center aligned">
                 <div class="sixteen wide column">
-                    บริษัท รถยนต์สำเร็จรูป BB ราคาส่ง 30
+                    บ. ฮอนด้า มอเตอร์ ประเทศไทย
                     <br> กระดาษทำการเปรียบเทียบปริมาณจำหน่ายรถยนต์สำเร็จรูปในประเทศ
-                    <br> เดือน มีนาคม 2559
+                    <br> เดือน มีนาคม 2560
                 </div>
             </div>
 
