--- a/workspace/ims-client/src/app/buckwaframework/project/pages/result-analysis/result-analysis.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/result-analysis/result-analysis.component.html
@@ -23,34 +23,34 @@
                         <label class="custom-label-w-25">รอบระยะเวลาการตรวจสอบ</label>
                         <div class="eight wide field">
                             <div class="ui icon input">
-                                <input type="text" class="custom-readonly" placeholder="MM/YYYY" value="12/2017" readonly="">
+                                <input type="text" class="custom-readonly" placeholder="MM/YYYY" value="11/2560" readonly="">
                                 <i class="add to calendar icon"></i>
                             </div>
                         </div>
                         <div class="eight wide field">
                             <label>-</label>
                             <div class="ui icon input">
-                                <input type="text" class="custom-readonly" placeholder="MM/YYYY" value="12/2017" readonly="">
+                                <input type="text" class="custom-readonly" placeholder="MM/YYYY" value="12/2560" readonly="">
                                 <i class="add to calendar icon"></i>
                             </div>
                         </div>
                     </div>
                     <div class="six wide field">
                         <label class="custom-label-w-25">เลขที่วิเคราะห์</label>
-                        <input type="text" readonly="" class="custom-readonly" value="000000000000">
+                        <input type="text" readonly="" class="custom-readonly" value="256000000001">
                     </div>
                 </div>
 
                 <div class="inline fields">
                     <div class="ten wide field">
                         <label class="custom-label-w-25">ผู้ประกอบการ</label>
-                        <input type="text" readonly="" class="custom-readonly" value="น้ำหอมเทสเตอร์ BB ราคาส่ง 30">
+                        <input type="text" readonly="" class="custom-readonly" value="บ. ฮอนด้า มอเตอร์ ประเทศไทย">
                     </div>
                 </div>
                 <div class="inline fields">
                     <div class="ten wide field">
                         <label class="custom-label-w-25">โรงอุตสาหกรรม</label>
-                        <input type="text" readonly="" class="custom-readonly" value="น้ำหอมเทสเตอร์">
+                        <input type="text" readonly="" class="custom-readonly" value="ฮอนด้า บางบ่อ">
                     </div>
                 </div>
 
@@ -59,7 +59,7 @@
                 <div class="inline fields">
                     <div class="ten wide field">
                         <label class="custom-label-w-25">ที่ตั้ง</label>
-                        <input type="text" readonly="" class="custom-readonly" value="65/9">
+                        <input type="text" readonly="" class="custom-readonly" value="65/9 ถนน สุขุมวิท, บางบ่อ, สมุทรปราการ 15200">
                     </div>
                 </div>
 
