--- a/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
@@ -66,49 +66,51 @@
                                 <div class="header">ประเภทกระดาษทำการ</div>
                                 <!-- <div class="description">Compiled CSS and JS files</div> -->
                                 <div class="list">
-                                    <div class="item hand-click">
-                                        <i class="file text outline icon"></i>
+                                    <div class="item">
+                                        <i class="folder icon"></i>
                                         <div class="content">
                                             <div class="header">กระดาษทำการรับ-จ่ายวัตถุดิบ</div>
                                             <!-- <div class="description">Individual component CSS and JS</div> -->
-                                        </div>
-                                    </div>
-                                    <div class="item hand-click">
-                                        <i class="file text outline icon"></i>
-                                        <div class="content">
-                                            <div class="header">การะดาษทำการเบิกใช้วัตถุดิบ</div>
-                                            <!-- <div class="description">Individual component CSS and JS</div> -->
-                                        </div>
-                                    </div>
-                                    <div class="item hand-click">
-                                        <i class="file text outline icon"></i>
-                                        <div class="content">
-                                            <div class="header">กระดาษทำการรับสินค้าสำเร็จรูป</div>
-                                            <!-- <div class="description">Individual component CSS and JS</div> -->
-                                        </div>
-                                    </div>
-                                    <div class="item hand-click">
-                                        <i class="file text outline icon"></i>
-                                        <div class="content">
-                                            <div class="header">กระดาษทำการตรวจสอบการลดหย่อนภาษี</div>
-                                            <!-- <div class="description">Individual component CSS and JS</div> -->
-                                        </div>
-                                    </div>
-                                    <div class="item hand-click">
-                                        <i class="file text outline icon"></i>
-                                        <div class="content">
-                                            <div class="header">กระดาษทำการส่งออกรถยนต์เพื่อจำหน่าย</div>
-                                            <!-- <div class="description">Individual component CSS and JS</div> -->
-                                        </div>
-                                    </div>
-                                    <div class="item hand-click">
-                                        <i class="file text outline icon"></i>
-                                        <div class="content">
-                                            <div class="header">
-                                                <a href="javascript:;" routerLink="/select-new-form">สร้างกระดาษทำการใหม่
-                                                </a>
+                                            <div class="list">
+                                                <div class="item hand-click">
+                                                    <i class="file text outline icon"></i>
+                                                    <div class="content">
+                                                        <div class="header">การะดาษทำการเบิกใช้วัตถุดิบ</div>
+                                                        <!-- <div class="description">Individual component CSS and JS</div> -->
+                                                    </div>
+                                                </div>
+                                                <div class="item hand-click">
+                                                    <i class="file text outline icon"></i>
+                                                    <div class="content">
+                                                        <div class="header">กระดาษทำการรับสินค้าสำเร็จรูป</div>
+                                                        <!-- <div class="description">Individual component CSS and JS</div> -->
+                                                    </div>
+                                                </div>
+                                                <div class="item hand-click">
+                                                    <i class="file text outline icon"></i>
+                                                    <div class="content">
+                                                        <div class="header">กระดาษทำการตรวจสอบการลดหย่อนภาษี</div>
+                                                        <!-- <div class="description">Individual component CSS and JS</div> -->
+                                                    </div>
+                                                </div>
+                                                <div class="item hand-click">
+                                                    <i class="file text outline icon"></i>
+                                                    <div class="content">
+                                                        <div class="header">กระดาษทำการส่งออกรถยนต์เพื่อจำหน่าย</div>
+                                                        <!-- <div class="description">Individual component CSS and JS</div> -->
+                                                    </div>
+                                                </div>
+                                                <div class="item hand-click">
+                                                    <i class="file text outline icon"></i>
+                                                    <div class="content">
+                                                        <div class="header">
+                                                            <a href="javascript:;" routerLink="/select-new-form">สร้างกระดาษทำการใหม่
+                                                                </a>
+                                                        </div>
+                                                        <!-- <div class="description">Individual component CSS and JS</div> -->
+                                                    </div>
+                                                </div>
                                             </div>
-                                            <!-- <div class="description">Individual component CSS and JS</div> -->
                                         </div>
                                     </div>
                                 </div>
