--- a/workspace/ims-client/src/app/buckwaframework/project/pages/create-new-form/create-new-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/create-new-form/create-new-form.component.html
@@ -106,7 +106,7 @@
                         </td>
                         <td style="text-align: right;">904,010.65
                         </td>
-                        <td style="text-align: right;">0.00
+                        <td style="text-align: right;"><span class="ui green horizontal label right aligned" style="float: right; width: 70px;">0.00</span>
                         </td>
                     </tr>
                     <tr>
@@ -118,7 +118,7 @@
                         </td>
                         <td style="text-align: right;">754,331.41
                         </td>
-                        <td style="text-align: right;">39,783.00
+                        <td style="text-align: right;"><span class="ui red horizontal label right aligned" style="float: right; width: 70px;">39,783.00</span>
                         </td>
                     </tr>
                     <tr>
@@ -130,7 +130,7 @@
                         </td>
                         <td style="text-align: right;">411,693.38
                         </td>
-                        <td style="text-align: right;">0.00
+                        <td style="text-align: right;"><span class="ui green horizontal label right aligned" style="float: right; width: 70px;">0.00</span>
                         </td>
                     </tr>
                     <tr>
@@ -142,7 +142,7 @@
                         </td>
                         <td style="text-align: right;">143,747.70
                         </td>
-                        <td style="text-align: right;">54,170.00
+                        <td style="text-align: right;"><span class="ui red horizontal label right aligned" style="float: right; width: 70px;">54,170.00</span>
                         </td>
                     </tr>
                     <tr>
@@ -152,7 +152,7 @@
                         </td>
                         <td style="text-align: right;">2,213,783.70
                         </td>
-                        <td style="text-align: right;">93953.00
+                        <td style="text-align: right;"><span class="ui red horizontal label right aligned" style="float: right; width: 70px;">93,953.00</span>
                         </td>
                     </tr>
                 </tbody>
