--- a/workspace/ims-client/src/app/buckwaframework/project/pages/create-new-form/create-new-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/create-new-form/create-new-form.component.html
@@ -59,13 +59,13 @@
                 </div>
                 <div class="four wide column">
                     <button class="ui primary button" (click)="onClickUpload()">
-            <i class="upload icon"></i>
-            อัพโหลด
-          </button>
+                        <i class="upload icon"></i>
+                        อัพโหลด
+                    </button>
                     <button class="ui button" (click)="onclickDelete()">
-            <i class="trash outline icon"></i>
-            ลบไฟล์
-          </button>
+                        <i class="trash outline icon"></i>
+                        ลบไฟล์
+                    </button>
                 </div>
             </div>
         </div>
@@ -106,7 +106,8 @@
                         </td>
                         <td style="text-align: right;">904,010.65
                         </td>
-                        <td style="text-align: right;"><span class="ui green horizontal label right aligned" style="float: right; width: 70px;">0.00</span>
+                        <td style="text-align: right;">
+                            <span class="ui green horizontal label right aligned" style="float: right; width: 70px;">0.00</span>
                         </td>
                     </tr>
                     <tr>
@@ -118,7 +119,8 @@
                         </td>
                         <td style="text-align: right;">754,331.41
                         </td>
-                        <td style="text-align: right;"><span class="ui red horizontal label right aligned" style="float: right; width: 70px;">39,783.00</span>
+                        <td style="text-align: right;">
+                            <span class="ui red horizontal label right aligned" style="float: right; width: 70px;">39,783.00</span>
                         </td>
                     </tr>
                     <tr>
@@ -130,7 +132,8 @@
                         </td>
                         <td style="text-align: right;">411,693.38
                         </td>
-                        <td style="text-align: right;"><span class="ui green horizontal label right aligned" style="float: right; width: 70px;">0.00</span>
+                        <td style="text-align: right;">
+                            <span class="ui green horizontal label right aligned" style="float: right; width: 70px;">0.00</span>
                         </td>
                     </tr>
                     <tr>
@@ -142,7 +145,8 @@
                         </td>
                         <td style="text-align: right;">143,747.70
                         </td>
-                        <td style="text-align: right;"><span class="ui red horizontal label right aligned" style="float: right; width: 70px;">54,170.00</span>
+                        <td style="text-align: right;">
+                            <span class="ui red horizontal label right aligned" style="float: right; width: 70px;">54,170.00</span>
                         </td>
                     </tr>
                     <tr>
@@ -152,7 +156,8 @@
                         </td>
                         <td style="text-align: right;">2,213,783.70
                         </td>
-                        <td style="text-align: right;"><span class="ui red horizontal label right aligned" style="float: right; width: 70px;">93,953.00</span>
+                        <td style="text-align: right;">
+                            <span class="ui red horizontal label right aligned" style="float: right; width: 70px;">93,953.00</span>
                         </td>
                     </tr>
                 </tbody>
@@ -161,13 +166,13 @@
             <div class="ui center aligned grid">
                 <div class="six wide column">
                     <button class="ui primary button" routerLink="/create-new-form">
-            <i class="print icon"></i>
-            พิมพ์กระดาษทำการ
-          </button>
+                        <i class="print icon"></i>
+                        พิมพ์กระดาษทำการ
+                    </button>
                     <button class="ui button" routerLink="/select-form">
-            <i class="remove icon"></i>
-            ล้างข้อมูล
-          </button>
+                        <i class="remove icon"></i>
+                        ล้างข้อมูล
+                    </button>
                 </div>
             </div>
         </div>
@@ -176,9 +181,9 @@
         <div class="ui grid center aligned">
             <div class="sixteen wide column">
                 <button class="ui button" routerLink="/select-new-form">
-          <i class="long arrow left icon"></i>
-          ย้อนกลับ
-        </button>
+                    <i class="long arrow left icon"></i>
+                    ย้อนกลับ
+                </button>
             </div>
         </div>
         <!-- </div> -->
