--- a/workspace/ims-client/src/app/buckwaframework/project/pages/select-inc-summary/select-inc-summary.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/select-inc-summary/select-inc-summary.component.html
@@ -52,37 +52,25 @@
             <label class="custom-label-w-25">สำนักงานสรรพสามิตพื้นที่สาขา</label>
           </div>
           <div class="five wide field">
-            <input type="text" class="custom-readonly" placeholder="สาขาเมือง 1" readonly="" value="ตำบลในเมือง">
+            <ul style="margin-left: -6%;">
+                <li>159000.50</li>
+                <li>400764.00</li>
+                <li>100000.00</li>
+              </ul>
           </div>
         </div>
 
         <div class="inline fields">
-          <div class="three wide field"></div>
-          <div class="five wide field">
-            <input type="hidden" class="custom-label-w-25" value="สำนักงานสรรพสามิตพื้นที่สาขา">
-            <input type="text" class="custom-readonly" placeholder="สาขาเมือง 2" readonly="" value="อำเภอเมือง">
-          </div>
-        </div>
-
-        <div class="inline fields">
-          <div class="three wide field"></div>
-          <div class="five wide field">
-            <input type="hidden" class="custom-label-w-25" value="สำนักงานสรรพสามิตพื้นที่สาขา">
-            <input type="text" class="custom-readonly" placeholder="สาขาเมือง 3" readonly="" value="จังหวัดสมุทรสงคราม">
-          </div>
-        </div>
-
-        <div class="inline fields">
-          <div class="eight wide field required">
-            <label class="custom-label-w-25">รอบระยะเวลาการตรวจสอบ</label>
-            <div class="eight wide field">
+          <div class="nine wide field">
+            <label class="custom-label-w-20" style="margin-right: 5%;">วันที่จัดเก็บรายได้ ตั้งแต่</label>
+            <div class="seven wide field">
               <div class="ui icon input">
                 <input type="text" class="custom-readonly" placeholder="DD/MM/YYYY" value="03/11/2560" readonly="">
                 <i class="add to calendar icon"></i>
               </div>
             </div>
             <div class="eight wide field">
-              <label>-</label>
+              <label>ถึง</label>
               <div class="ui icon input">
                 <input type="text" class="custom-readonly" placeholder="DD/MM/YYYY" value="03/11/2560" readonly="">
                 <i class="add to calendar icon"></i>
